--- a/kadai_002/typing/index.html
+++ b/kadai_002/typing/index.html
@@ -8,9 +8,10 @@
     <title>タイピングゲーム</title>
 </head>
 <body>
-    <p id="count" class="count">60</p>
+    <p id="count" class="count">3</p>
     <div id="wrap" class="wrap">
         <span id="typed" class="typed"></span><span id="untyped"></span>
+        <p id="aaa"></p>
     </div>
     <button id="start">スタート</button>
     <script type="text/javascript" src="main.js"></script>
