--- a/lesson.v.02-part1/index.html
+++ b/lesson.v.02-part1/index.html
@@ -45,7 +45,7 @@
 
         <article>
             <h2 id="about" class="about">About</h2>
-            <section class="about">
+            <section id="fade-in"><!-- class="about -->
                 <img class="circle" src="img/about.png" alt="男性の写真">
                 <div class="text">
                     <h3>Kazuki Asahina</h3>
@@ -57,7 +57,7 @@
                     </ul>
                 </div>
             </section>
-            <h2 id="works" class="about">Works</h2>
+            <h2 id="works" id="about" class="about">Works</h2>
             <section class="works">
                 <div class="item">
                     <img class="scroll" src="img/works1.png" alt="日本海">
