--- a/商品の横スクロール実装案件/横スクロールgpt.html
+++ b/商品の横スクロール実装案件/横スクロールgpt.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="product-lineup sp">
-    <div class="lineup">
+    <div class="lineup lineup1">
       <p>123</p>
       <p>12345</p>
     </div>
@@ -66,95 +66,113 @@
   </div>
   <div class="product-set">
     <div class="product-container container1">
-      <div class="product">商品qq</div>
-      <div class="product">商品2</div>
-      <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
+      <div class="product">
+        <div class="product-img"><img src="" alt=""></div>
+        <div class="product-text">
+          <p>M18 FUEL</p>
+          <p>1/2 インチ 339Nm</p>
+          <p>インパクトレンチ</p>
+          <p class="product-number">M18 FIW212-OXO JP</p>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product-img"><img src="" alt=""></div>
+        <div class="product-text">
+          <p>M18 FUEL</p>
+          <p>1/2 インチ 339Nm</p>
+          <p>インパクトレンチ</p>
+          <p>M18 FIW212-OXO JP</p>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product-img"><img src="" alt=""></div>
+        <div class="product-text">
+          <p>M18 FUEL</p>
+          <p>1/2 インチ 339Nm</p>
+          <p>インパクトレンチ</p>
+          <p>M18 FIW212-OXO JP</p>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product-img"><img src="" alt=""></div>
+        <div class="product-text">
+          <p>M18 FUEL</p>
+          <p>1/2 インチ 339Nm</p>
+          <p>インパクトレンチ</p>
+          <p>M18 FIW212-OXO JP</p>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product-img"><img src="" alt=""></div>
+        <div class="product-text">
+          <p>M18 FUEL</p>
+          <p>1/2 インチ 339Nm</p>
+          <p>インパクトレンチ</p>
+          <p>M18 FIW212-OXO JP</p>
+        </div>
+      </div>
+      
+     
     </div>
     <div class="product-container container2">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
-      <div class="product">ーー</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
+      <div class="product">商品3</div>
     </div>
     <div class="product-container container3">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container4">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container5">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container6">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container7">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container8">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container9">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container10">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container11">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container12">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
     <div class="product-container container13">
-      <div class="product">商品1</div>
+      <div class="product"><img src="" alt=""></div>
       <div class="product">商品2</div>
       <div class="product">商品3</div>
-      <div class="product">商品4</div>
-      <div class="product">商品5</div>
     </div>
   </div>
   <script src="script.js"></script>
